# CMS

./: README.md  docker-compose.yml
APIGateway/: CMakeLists.txt  Dockerfile  Makefile  first  second  server.cpp
APIGateway/config/: base_config.yaml
APIGateway/include/: JSONbuilder.hpp  JWTmaster.hpp  SRP_module.hpp  base_request.hpp  big_boo.hpp  credention.hpp  crypto_request.hpp  drafter.hpp  exeptions.hpp  header.hpp  helper_functions.hpp  irequest.hpp  key_storage.hpp  logger.hpp  master_request.hpp  request_draft.hpp  router.hpp  server.hpp  singleton.hpp  validator.hpp
APIGateway/src/: JSONbuilder.cpp  JWTmaster.cpp  SRP_module.cpp  big_boo.cpp  crypto_request.cpp  drafter.cpp  exeptions.cpp  function.cpp  helper_functions.cpp  key_storage.cpp  logger.cpp  master_request.cpp  prime_number.cpp  request_draft.cpp  router.cpp  server.cpp  validator.cpp  www.cpp
APIGateway/test/: test_case.cpp  test_crypto.cpp  test_drafter.cpp  test_jwt_token.cpp  test_key_storage.cpp  test_regex.cpp  test_server.cpp  test_srp.cpp  test_srp_1.cpp  test_srp_exchange.cpp
AuthorizationService/: .env  DH.py  Dockerfile  JWT.py  SRP_module.py  config.py  request_db.py  requirements.txt  test_srp.py  wsgi.py
AuthorizationService/Tests/: test_crypto.py  test_for_data.py  test_srp_exchange.py
DBManager/: Dockerfile  db.py  rabbit.py  redis_cash.py  request_for_currency.py  requirements.txt  wsgi.py
MailAgent/: config.py  requirements.txt  sender_telegram.py  wsgi.py
prometheus-config/: prometheus-config.yml
